--- a/index.html
+++ b/index.html
@@ -34,14 +34,28 @@
   </header>
 
   <main>
-    <div>
-      <p>Oi</p>
-      <p>Oi</p>
-      <p>Oi</p>
-      <p>Oi</p>
-      <p>Oi</p>
+    <div class="header__secundario">
+      <div>
+        <p></p>
+        <p></p>
+        <p></p>
+      </div>
+
     </div>
   </main>
+
+  <footer>
+    <div>
+      <img src="https://proceedings.science/themes/proceedings/dewey/images/galoa-logo.svg" alt="">
+      <a href="#">Saiba mais</a>
+    </div>
+    <div>
+      <p><strong>Preservar a memória do evento e ampliar o acesso ao conhecimento científico</strong> gerado em eventos é a razão de ser
+        da plataforma Galoá Proceedings.</p>
+      <p>Os trabalhos publicados aqui têm maior alcance e ficam disponíveis para toda a comunidade científica, mantendo
+        aceso o debate científico fomentado pelos encontros e aumentando o impacto do evento.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
