--- a/index.html
+++ b/index.html
@@ -34,23 +34,127 @@
   </header>
 
   <main>
-    <div class="header__secundario">
-      <div>
-        <p></p>
-        <p></p>
-        <p></p>
+    <!-- Cabecalho -->
+    <div>
+      <div class="cabecalho container">
+        <div class="cabecalho__lang">
+          <div class="cabecalho__text">
+            <h3 class="titulo">Anais do Simpósio Latino Americano de Ciências de Alimentos </h3>
+            <h2 class="titulo">Anais do 13º Simpósio Latino Americano de Ciência de Alimentos </h2>
+            <h3 class="titulo">ISSN: 1234-5678</h3>
+          </div>
+
+          <div class="cabecalho__lang__conteudo">
+            <img src="img/language image.svg" alt="Language Logo">
+            <select name="idioma" id="idioma">
+              <option value="pt-br">PT, BR</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="cabecalho__profile">
+          <div class="notification">
+            <span>3</span>
+          </div>
+          <img src="img/Imagem.svg" alt="Profile">
+          <div>
+            <p>Bem Vindo!</p>
+            <p>alguem12@galoascience.com</p>
+          </div>
+        </div>
       </div>
 
     </div>
+
+    <!-- Video -->
+    <!-- <iframe src="https://player.vimeo.com/video/420216843?h=97e0eaf3ef" width="640" height="360" frameborder="0"
+      allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe> -->
+    <div class="video__detalhes container">
+      <div class="video__conteudo">
+        <h1 class="titulo titulo__principal">Análise sensorial de preparações funcionais desenvolvidas para escolares
+          entre 09 e 15 anos, do município de
+          Campinas/SP</h1>
+        <img src="img/vídeo apresentação.png" alt="Video de apresentação">
+      </div>
+
+      <div class="detalhes__botoes">
+        <div class="detalhes__links">
+          <a href=""><img src="img/download button.svg" alt="Download button"></a>
+          <a href=""><img src="img/favorite button.svg" alt="Favorite button"></a>
+          <a href=""><img src="img/doi button.svg" alt="Doi button"></a>
+        </div>
+
+        <a class="link__text" href="#">COMO CITAR ESSE TRABALHO?</a>
+
+        <div class="detalhes border__style">
+          <h2 class="titulo titulo__colorido">Detalhes</h2>
+
+          <div class="detalhes__box">
+            <p>Tipo de Apresentação: <strong>Pôster</strong></p>
+            <p>Eixo temático: <strong> Alimentação e saúde (AS)</strong></p>
+            <p>Palavras-chaves: <strong>Alimentos funcionais, alimentação escolar</strong>.</p>
+
+            <div class="autores">
+              <p><b>Autores:</b></p>
+              <p>Galileo Galilei¹</p>
+              <p>Berta Lange de Morretes²</p>
+              <p>Isaac Newton³</p>
+              <p>Cesar Lattes¹</p>
+              <p>Stephen Hawking⁴</p>
+            </div>
+
+            <div class="universidades">
+              <p>¹Universidade Estadual de Campinas</p>
+              <p>²Universidade de São Paulo</p>
+              <p>³Instituto Nacional de Pesquisas Espaciais</p>
+              <p>⁴Universidade Federal do Rio de Janeiro</p>
+            </div>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut est odit hic quibusdam magnam, consequuntur
+              recusandae iste, nemo, necessitatibus explicabo eius similique aperiam fugiat eveniet? Odio dignissimos
+              aliquam accusantium repellat.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor molestias ullam ad ducimus quaerat,
+              labore, accusamus itaque veniam repellendus similique nulla ipsa pariatur, perferendis quae?
+              Exercitationem quis molestias neque molestiae?</p>
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni sunt eius non sequi facilis voluptatem
+              maiores voluptate omnis nam ipsum, excepturi deserunt, fugiat soluta qui ipsam dicta ducimus, culpa eum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="resumo container ">
+        <h2 class="border__style titulo__colorido">Resumo</h2>
+
+        <div class="resumo__conteudo border__style">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis auctor, mollis felis ut,
+            commodo turpis. Phasellus felis mauris, egestas eget cursus et, iaculis quis lacus. Fusce auctor eros sed
+            magna ultricies gravida. Etiam aliquam dictum nisl, vel aliquet enim accumsan sit amet. Donec finibus nisi
+            tellus, ut viverra lorem vestibulum ut. Phasellus condimentum orci id leo condimentum lobortis et non lorem.
+            Sed id nisl metus. Quisque sollicitudin ligula in sapien scelerisque, ac gravida eros vestibulum Phasellus
+            condimentum orci id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque sollicitudin ligula in
+            sapien scelerisque, ac gravida eros vestibulum. Etiam aliquam dictum nisl, vel aliquet enim accumsan sit
+            ametl accumsant... ver mais</p>
+        </div>
+      </div>
+    </div>
+    </div>
   </main>
 
-  <footer>
+
+  <!-- Footer -->
+  <footer class="container">
     <div>
       <img src="https://proceedings.science/themes/proceedings/dewey/images/galoa-logo.svg" alt="">
       <a href="#">Saiba mais</a>
     </div>
     <div>
-      <p><strong>Preservar a memória do evento e ampliar o acesso ao conhecimento científico</strong> gerado em eventos é a razão de ser
+      <p><strong>Preservar a memória do evento e ampliar o acesso ao conhecimento científico</strong> gerado em eventos
+        é a razão de ser
         da plataforma Galoá Proceedings.</p>
       <p>Os trabalhos publicados aqui têm maior alcance e ficam disponíveis para toda a comunidade científica, mantendo
         aceso o debate científico fomentado pelos encontros e aumentando o impacto do evento.</p>
