finalizado resumo e adicionado discussoes

--- a/index.html
+++ b/index.html
@@ -126,28 +126,137 @@
       </div>
     </div>
 
+    <!-- Resumo -->
     <div class="container">
-      <div class="resumo container ">
+      <div class="caixa ">
         <h2 class="border__style titulo__colorido">Resumo</h2>
 
-        <div class="resumo__conteudo border__style">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis auctor, mollis felis ut,
-            commodo turpis. Phasellus felis mauris, egestas eget cursus et, iaculis quis lacus. Fusce auctor eros sed
-            magna ultricies gravida. Etiam aliquam dictum nisl, vel aliquet enim accumsan sit amet. Donec finibus nisi
-            tellus, ut viverra lorem vestibulum ut. Phasellus condimentum orci id leo condimentum lobortis et non lorem.
-            Sed id nisl metus. Quisque sollicitudin ligula in sapien scelerisque, ac gravida eros vestibulum Phasellus
-            condimentum orci id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque sollicitudin ligula in
-            sapien scelerisque, ac gravida eros vestibulum. Etiam aliquam dictum nisl, vel aliquet enim accumsan sit
-            ametl accumsant... ver mais</p>
+        <div class="caixa__conteudo border__style">
+          <div class="texto__resumido expandir">
+            <p class="expandir">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis auctor,
+              mollis felis ut,
+              commodo turpis. Phasellus felis mauris, egestas eget cursus et, iaculis quis lacus. Fusce auctor eros sed
+              magna ultricies gravida. Etiam aliquam dictum nisl, vel aliquet enim accumsan sit amet. Donec finibus nisi
+              tellus, ut viverra lorem vestibulum ut. Phasellus condimentum orci id leo condimentum lobortis et non
+              lorem.
+              Sed id nisl metus. Quisque sollicitudin ligula in sapien scelerisque, ac gravida eros vestibulum Phasellus
+              condimentum orci id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque sollicitudin ligula
+              in
+              sapien scelerisque, ac gravida eros vestibulum. Etiam aliquam dictum nisl, vel aliquet enim accumsan sit
+              ametl accumsant... </p>
+
+            <span class="botao__expandir expandir">ver mais</span>
+          </div>
+
+          <div class="texto__completo resumir">
+            <p class="resumir">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis auctor,
+              mollis felis ut,
+              commodo turpis. Phasellus felis mauris, egestas eget cursus et, iaculis quis lacus. Fusce auctor eros sed
+              magna ultricies gravida. Etiam aliquam dictum nisl, vel aliquet enim accumsan sit amet. Donec finibus nisi
+              tellus, ut viverra lorem vestibulum ut. Phasellus condimentum orci id leo condimentum lobortis et non
+              lorem.
+              Sed id nisl metus. Quisque sollicitudin ligula in sapien scelerisque, ac gravida eros vestibulum Phasellus
+              condimentum orci id leo condimentum lobortis et non lorem. Sed id nisl metus. Quisque sollicitudin ligula
+              in
+              sapien scelerisque, ac gravida eros vestibulum. Etiam aliquam dictum nisl, vel aliquet enim accumsan sit
+              ametl accumsant Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil eligendi error deserunt
+              corrupti? Dolorum ipsam eius corrupti. Dolorum incidunt itaque minima cum beatae nobis iure! Sit alias
+              modi quis ducimus? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem sunt adipisci natus
+              nesciunt facilis quam cupiditate deserunt, hic, iste aliquid cumque aspernatur accusamus perferendis
+              dolores dicta dolor excepturi amet! Sunt.... </p>
+
+            <p class="resumir">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum natus dignissimos,
+              distinctio in ex
+              molestias, tempora odio optio, cupiditate maiores laborum. Fugit nulla molestias ea a doloremque
+              perferendis corrupti ipsum? Laudantium doloremque, error aliquam corrupti aliquid esse eligendi architecto
+              animi cum ea aut, quia adipisci natus sit rem tempore omnis tempora eius facilis. Pariatur molestias
+              reiciendis optio excepturi provident sit tempore officiis tempora minus rerum nobis, voluptates dolorum et
+              sapiente quasi nostrum beatae odit eius! Molestias quis possimus magnam animi placeat, neque tempora,
+              adipisci saepe sunt at eos nesciunt dicta blanditiis ipsam dolorem assumenda magni, quibusdam delectus
+              facilis quam harum dolores. Quod animi consectetur quis non nobis debitis! Corporis cumque blanditiis
+              porro optio nesciunt, maxime similique error nemo perspiciatis animi cupiditate quibusdam quisquam, odio
+              officia incidunt quasi ipsum voluptatem architecto soluta impedit id explicabo rem natus? Quasi tempora
+              praesentium minus! Facere distinctio harum quo expedita, autem eum? Adipisci quas praesentium blanditiis
+              mollitia ex repellat sint labore quo voluptates cum nihil, animi enim iusto qui maiores quidem molestias
+              eius explicabo, neque incidunt sunt! Dolore inventore maxime temporibus. Tempore quisquam consequuntur
+              enim ullam perspiciatis, vel, aut sint libero sequi quae modi officia architecto. Id, libero doloribus
+              incidunt vel autem consequuntur quae corrupti alias voluptatum eius repellendus nulla, provident quasi
+              deserunt? Labore veniam quam molestias at iure perspiciatis qui natus aliquam laboriosam, architecto
+              impedit rerum. Velit amet tempore blanditiis reiciendis in laudantium est voluptates esse. Molestias omnis
+              tenetur delectus. Temporibus inventore, non reiciendis numquam aliquam quo dicta nulla hic eos quae velit!
+              Culpa animi aspernatur architecto voluptates eos, porro magnam sapiente dicta molestias non neque facere
+              suscipit rerum ut placeat est cum incidunt sunt obcaecati voluptate laborum repellendus ab itaque?
+              Temporibus perspiciatis perferendis consectetur aperiam, accusamus tempora quam et a non totam fuga facere
+              magnam corrupti molestiae quis voluptate, voluptates quibusdam numquam esse saepe veniam sunt velit minus
+              commodi. Alias libero tempore hic adipisci reiciendis omnis aliquam maiores unde minima numquam
+              accusantium aperiam voluptatum, molestiae corporis nulla odit porro dicta autem labore culpa ea suscipit
+              officia harum quaerat?</p>
+
+            <p class="resumir">
+              Corrupti, deserunt dolorem neque reiciendis illo nesciunt fuga. Porro sapiente
+              veritatis quaerat repellendus iste quo magni, aperiam laudantium tempora exercitationem perspiciatis
+              tempore nesciunt laboriosam, perferendis natus, dicta quae excepturi expedita debitis temporibus a? Dicta
+              quaerat, dolorem nobis commodi non amet est consectetur beatae maxime soluta ab id voluptate consequuntur
+              aut sint illo maiores cumque numquam minima architecto officiis tenetur magnam optio velit. Nobis non
+              blanditiis, magni possimus ipsa rerum, error accusantium minima atque voluptatem, illum nihil aliquam
+              harum perferendis mollitia ratione aut assumenda laborum eligendi corporis! Dolor dolores accusamus animi
+              ut nihil enim, recusandae magni optio cumque. Ipsam ad vero harum non labore itaque tenetur alias eum
+              accusantium rerum nesciunt amet voluptas veniam enim qui quidem fugit libero in voluptatibus ex doloribus,
+              minus sequi numquam? Totam maxime molestiae corrupti ex? Excepturi qui cupiditate deleniti nostrum eos
+              nisi. Iure aut nisi necessitatibus illum, quidem laborum aperiam doloremque sapiente architecto excepturi
+              nulla ut molestias quaerat ducimus aliquid dolor fugit nostrum temporibus, mollitia alias. Minus et nisi
+              nobis.
+            </p>
+          </div>
         </div>
       </div>
     </div>
+
+    <!-- Discussões -->
+    <div class="container">
+      <div class="caixa">
+        <h2 class="border__style titulo__colorido">Discussões</h2>
+
+        <div class="caixa__conteudo discussoes border__style">
+          <div class="discussoes">
+            <h3 class="titulo">Compartilhe suas ideias ou dúvidas com os autores!</h3>
+            <div class="discussoes__icones">
+              <img src="img/icone1.svg" alt="">
+              <img src="img/icone2.svg" alt="">
+              <img src="img/icone3.svg" alt="">
+            </div>
+
+            <p>Sabia que o maior estímulo no desenvolvimento científico e cultural é a curiosidade? Deixe seus
+              questionamentos ou sugestões para o autor!</p>
+          </div>
+
+          <div class="criar__topico">
+            <img src="img/icon - criar.svg" alt="Icone criar tópico">
+            <span>criar tópico</span>
+          </div>
+
+          <div class="assunto__conteudo border__style">
+            <h3>Assunto da pergunta aparece aqui</h3>
+            <h4>Carlos Henrique Santos</h4>
+
+            <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão e impacto
+              de processo formativo situado impacto de processo formativo processo...</p>
+
+            <div class="assunto__opcoes">
+              <img src="img/mais informações.svg" alt="">
+              <img src="img/favoritar.svg" alt="">
+              <span>1 like</span>
+              <span>1 resposta</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
   </main>
 
-
   <!-- Footer -->
-  <footer class="container">
+  <footer>
     <div>
       <img src="https://proceedings.science/themes/proceedings/dewey/images/galoa-logo.svg" alt="">
       <a href="#">Saiba mais</a>
@@ -160,6 +269,8 @@
         aceso o debate científico fomentado pelos encontros e aumentando o impacto do evento.</p>
     </div>
   </footer>
+
+  <script src="index.js"></script>
 </body>
 
 </html>
