--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
     <!-- Discussões -->
     <div class="container">
       <div class="caixa">
-        <h2 class="border__style titulo__colorido">Discussões</h2>
+        <h2 class="border__style titulo titulo__colorido">Discussões</h2>
 
         <div class="caixa__conteudo discussoes border__style">
-          <div class="discussoes">
+          <div class="discussoes discussoes__criar__topico">
             <h3 class="titulo">Compartilhe suas ideias ou dúvidas com os autores!</h3>
             <div class="discussoes__icones">
               <img src="img/icone1.svg" alt="">
@@ -230,9 +230,149 @@
               questionamentos ou sugestões para o autor!</p>
           </div>
 
-          <div class="criar__topico">
+          <div class="criar__topico__botao discussoes__criar__topico">
             <img src="img/icon - criar.svg" alt="Icone criar tópico">
-            <span>criar tópico</span>
+            <span class="criar__topico">criar tópico</span>
+          </div>
+
+          <div class="discussoes__form">
+            <p>Tem uma dúvida ou sugestão? Compartilhe seu feedback com os autores!</p>
+
+            <form action="">
+              <label for="assunto">Assunto</label>
+              <input class="discussao__dados border__style" type="text"
+                placeholder="Defina um tópico sucinto para notificar os autores...">
+              <label for="conteúdo">Conteúdo</label>
+              <textarea class="discussao__dados border__style" name="conteúdo" id="conteudo" cols="30" rows="10"
+                contenteditable="true"></textarea>
+
+              <div class="editor__texto">
+                <div>
+                  <a href="#"><img src="img/bold.svg" alt="Bolt text"></a>
+                  <a href="#"><img src="img/italic.svg" alt="Italic Text"></a>
+                </div>
+
+                <a class="enviar__topico">Enviar</a>
+              </div>
+            </form>
+          </div>
+
+          <div class="conteudo__novo__topico">
+            <div class="novo__topico">
+              <h4 class="titulo">Seu tópico foi enviado com sucesso! :D</h4>
+              <p>Agradecemos por sua contribuição, uma notificação será enviada ao seu email assim que seu tópico for
+                respondido!</p>
+              <a href="">Descubra outros trabalhos!</a>
+              <a class="criar__novo__topico" href="">criar novo tópico</a>
+            </div>
+
+            <div class="caixa__blur">
+              <div class="editar__topico">
+                <img src="img/mensagem enviada.svg" alt="Mensagem enviada">
+                <p>Aguardadndo feedback dos autores</p>
+                <a href="#">Editar tópico</a>
+              </div>
+
+              <div class="blur">
+
+                <div class="assunto__conteudo border__style">
+                  <h3>Assunto da pergunta aparece aqui</h3>
+                  <h4>Carlos Henrique Santos</h4>
+
+                  <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão e
+                    impacto
+                    de processo formativo situado impacto de processo formativo processo...</p>
+
+                  <div class="assunto__opcoes">
+                    <img src="img/mais informações.svg" alt="">
+                    <img src="img/favoritar.svg" alt="">
+                    <span>1 like</span>
+                    <span>1 resposta</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="assunto__conteudo border__style">
+            <h3>Assunto da pergunta aparece aqui</h3>
+            <h4>Carlos Henrique Santos</h4>
+
+            <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão e impacto
+              de processo formativo situado impacto de processo formativo processo...</p>
+
+            <div class="assunto__opcoes">
+              <img src="img/mais informações.svg" alt="">
+              <img src="img/favoritar.svg" alt="">
+              <span>1 like</span>
+              <span>1 resposta</span>
+            </div>
+          </div>
+
+          <div class="assunto__conteudo assunto__conteudo__completo border__style">
+            <h3>Assunto da pergunta aparece aqui</h3>
+            <h4>Carlos Henrique Santos</h4>
+
+            <p>Comecinho da pergunta aparece aqui resente relato inscreve-se no campo da análise da dimensão e impacto
+              de processo formativo situado impacto de processo formativo processo resente relato inscreve-se no campo
+              da análise da dimensão e impacto de processo formativo situado impacto de processo formativo processo?</p>
+
+            <div class="assunto__opcoes">
+              <img src="img/mais informações.svg" alt="">
+              <img src="img/favoritar.svg" alt="">
+              <span>4 likes</span>
+              <span>4 respostas</span>
+            </div>
+
+            <div class="discussao__lista">
+              <div class="discussao__card">
+                <div class="discussao__autor">
+                  <h4>Adriano da Silva</h4>
+
+                  <div>
+                    <span>Autor</span>
+                    <img src="img/mensagem enviada.svg" alt="Mensagem enviada">
+                  </div>
+                </div>
+
+                <p>Resposta do autor é aqui. Relato inscreve-se no campo da análise da dimensão e impacto de processo
+                  formativo situado impacto de processo formativo processo resente relato inscreve-se no campo da
+                  análise da dimensão e impacto de processo formativo situado impacto de processo formativo processo.
+                </p>
+              </div>
+
+              <div class="discussao__card">
+                <div class="discussao__autor">
+                  <h4>Adriano da Silva</h4>
+
+                  <div>
+                    <span>Autor</span>
+                    <img src="img/mensagem enviada.svg" alt="Mensagem enviada">
+                  </div>
+                </div>
+
+                <p>Resposta do autor é aqui. Relato inscreve-se no campo da análise da dimensão e impacto de processo
+                  formativo situado impacto de processo formativo processo resente relato inscreve-se no campo da
+                  análise da dimensão e impacto de processo formativo situado impacto de processo formativo processo.
+                </p>
+              </div>
+
+              <div class="discussao__card">
+                <div class="discussao__autor">
+                  <h4>Adriano da Silva</h4>
+
+                  <div>
+                    <span>Autor</span>
+                    <img src="img/mensagem enviada.svg" alt="Mensagem enviada">
+                  </div>
+                </div>
+
+                <p>Resposta do autor é aqui. Relato inscreve-se no campo da análise da dimensão e impacto de processo
+                  formativo situado impacto de processo formativo processo resente relato inscreve-se no campo da
+                  análise da dimensão e impacto de processo formativo situado impacto de processo formativo processo.
+                </p>
+              </div>
+            </div>
           </div>
 
           <div class="assunto__conteudo border__style">
