--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
   <title>Anais do Simpósio Latino Americano de Ciências de Alimentos </title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
@@ -27,7 +27,7 @@
         <li><a href="#">Comitês</a></li>
         <li><a href="#">Autores</a></li>
         <li><a href="#">Eixos Temáticos</a></li>
-        <li><a href="#">Trabalhos</a></li>
+        <li class="nav__ativo"><a href="#">Trabalhos</a></li>
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
@@ -385,8 +385,8 @@
             <div class="assunto__opcoes">
               <img src="img/mais informações.svg" alt="">
               <img src="img/favoritar.svg" alt="">
-              <span>1 like</span>
-              <span>1 resposta</span>
+              <span>4 like</span>
+              <span>4 resposta</span>
             </div>
           </div>
         </div>
