--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
           <div class="criar__topico__botao discussoes__criar__topico">
             <img src="img/icon - criar.svg" alt="Icone criar tópico">
-            <span class="criar__topico">criar tópico</span>
+            <span class="criar__topico__botao criar__topico">criar tópico</span>
           </div>
 
           <div class="discussoes__form">
